# College_bot

./: .env  pyproject.toml
app/: .env  config.py  main.py
app/agents/: bot_agent.py
app/loaders/: db_loader.py  pdf_loader.py  web_loader.py
app/utils/: helper.py
app/vector_stores/: mongodb_store.py
